--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -42,11 +46,28 @@ h4 {
 
 .inline-block {
     display: inline-block;
+   
 
 }
-
+p {
+    color: #f8fafa;
+    
+}
 /*--------------------------------------------Heading*/
+.row-table {
+    display: table;
+}
+.section-column {
+    display: table-cell;
+    float: none;
+    padding: 0 30px 30px;
 
+}
+.section-heading {
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
 header {
     margin: 0;
 }
@@ -141,8 +162,8 @@ header {
 /* ----------------------------------------Footer */
 
 footer {
-    background-color: #525252;
-    color: #fafafa;
+    background-color: #876161;
+    
     min-height: 120px;
     margin: 0;
 }
