--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,7 @@ h4 {
    
 
 }
-p {
-    color: #f8fafa;
-    
-}
+
 /*--------------------------------------------Heading*/
 .row-table {
     display: table;
@@ -209,4 +206,14 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+/* ----------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
