--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@
 .ui-menu-color-download {
     background-color: #117557;
 }
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
 
 /* ----------------------------------------Special paddings/margins/text */
 
@@ -63,6 +66,7 @@ h4 {
     padding: 0 30px 30px;
 
 }
+.history-heading,
 .section-heading {
     font-weight: 300;
     margin-top: 25px;
@@ -267,4 +271,49 @@ footer {
 }
 .progress-section {
     margin: 40px 20px;
+}
+
+/*--------------------------------------------resume-page-history*/
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 43em 2em 0em 2em;
+    color: #fafafa;
+    position: relative;
+    border-left: 1px solid ;
+}
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
