--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,9 @@
 .bg-color-work-history {
     background-color: #9b59b6;
 }
-
+.bg-color-contact {
+    background-color: white;
+}
 /* ----------------------------------------Special paddings/margins/text */
 
 h1,
@@ -68,6 +70,7 @@ h4 {
 }
 .history-heading,
 .section-heading {
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
@@ -272,23 +275,25 @@ footer {
 .progress-section {
     margin: 40px 20px;
 }
+/* ----------------------------------------Work History */
 
-/*--------------------------------------------resume-page-history*/
 .history-heading {
     color: #fafafa;
     margin-bottom: 50px;
 }
 
 .timeline-item {
-    padding: 43em 2em 0em 2em;
-    color: #fafafa;
+    padding: 4em 2em 0em 2em;
     position: relative;
-    border-left: 1px solid ;
+    color: #fafafa;
+    border-left: 1px solid;
 }
+
 .timeline-item p {
     padding: 0;
     margin: 0;
 }
+
 .timeline-item:before {
     content: attr(data-dates);
     position: absolute;
@@ -316,4 +321,30 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+/* ----------------------------------------contact page.. contact form */
+.contact-heading{
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+.center-form{
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+button[type="submit"] {
+    margin-top: 25px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: rgb(152, 20, 20);
+}
+/* ----------------------------------------media queiry */
+@media(min-width:992px) {
+    .center-form{
+        padding-top: 30px;
+        min-height: 240px;
+        max-width: 50%;
+        margin: 0 auto;
+    }
 }
