--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /*--------------------------------------------Colors*/
 
@@ -6,10 +7,31 @@
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: #ffffff;
 }
-.bg-color-personal-info{
-    background-color: #e7f2ca;
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
@@ -25,15 +47,30 @@
 }
 
 .ui-menu-color-download {
-    background-color: #117557;
+    background-color: #d9a81d;
 }
-.bg-color-work-history {
-    background-color: #9b59b6;
+
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
 }
-.bg-color-contact {
-    background-color: white;
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
 }
-/* ----------------------------------------Special paddings/margins/text */
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
 
 h1,
 h2,
@@ -47,27 +84,20 @@ h4 {
 }
 
 .general-sub {
-   
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
 
 .inline-block {
     display: inline-block;
-   
-
 }
 
-/*--------------------------------------------Heading*/
+
 .row-table {
     display: table;
 }
-.section-column {
-    display: table-cell;
-    float: none;
-    padding: 0 30px 30px;
 
-}
 .history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
@@ -75,6 +105,10 @@ h4 {
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
+
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
@@ -84,7 +118,7 @@ header {
 }
 
 .logo {
-    background: url("../images/guy-image.png");
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,7 +133,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .title {
@@ -108,24 +142,15 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #fff;
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
-}
-
-#nav li {
-    font-size: 14px;
-    padding: 0;
+    color: #ffffff;
 }
 
 #nav {
     margin: 0;
+}
+
+#nav li {
+    padding: 0;
 }
 
 .menuitem {
@@ -137,9 +162,10 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
     height: 120px;
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -159,6 +185,7 @@ header {
     letter-spacing: 2px;
 }
 
+
 /*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
@@ -166,28 +193,29 @@ header {
     height: 120px;
 }
 
-/* ----------------------------------------Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
-    background-color: #876161;
-    
+    background-color: #525252;
+    color: #fafafa;
     min-height: 120px;
     margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #e84610;
 }
 
 .social-links {
@@ -211,13 +239,14 @@ footer {
 }
 
 .social-links li a i:hover {
-    background: #e38768;
+    background: #e84610;
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
-/* ----------------------------------------Three Reasons */
+
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -228,42 +257,49 @@ footer {
     margin-bottom: 15px;
 }
 
-/*--------------------------------------------pesronal-info*/
-.personal-info-item{
+/*--------------------------------------------Personal Info*/
+
+.personal-info-item {
     margin-bottom: 20px;
     display: block;
     clear: both;
 }
+
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
-
 }
+
 .personal-info-item .key p,
 .personal-info-item .value p {
     margin: 0;
 }
+
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
     vertical-align: top;
 }
-.personal-info-item .key p{
+
+.personal-info-item .key p {
     font-weight: 700;
 }
-.personal-info-item .value{
+
+.personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/*--------------------------------------------resume-page-skills*/
+/*--------------------------------------------Skills*/
+
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
+
 .progress-type {
     position: absolute;
     left: 0px;
@@ -272,15 +308,14 @@ footer {
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
+
+
 .progress-section {
     margin: 40px 20px;
 }
-/* ----------------------------------------Work History */
 
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-}
+
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -294,7 +329,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -302,12 +337,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -319,32 +354,56 @@ footer {
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
-/* ----------------------------------------contact page.. contact form */
-.contact-heading{
+
+/*--------------------------------------------Contact*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
 }
-.center-form{
+
+
+.center-form {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
 }
+
 button[type="submit"] {
-    margin-top: 25px;
+    margin-top: 15px;
     margin-bottom: 20px;
+    background-color: #e84610;
     color: #fafafa;
-    background-color: rgb(152, 20, 20);
 }
-/* ----------------------------------------media queiry */
-@media(min-width:992px) {
-    .center-form{
+
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
+    .center-form {
         padding-top: 30px;
         min-height: 240px;
-        max-width: 50%;
         margin: 0 auto;
+        max-width: 50%;
     }
 }
